# dance

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml  test-build.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: json-raw-empty-no-scroll.md  url-detail-renders-json-tree.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-capture-reliability-storage-cohesion/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-04-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: detail-preview-redesign-plan.md  detail-preview-redesign-review.md
scripts/: sync-version.js  update-version.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: ai-chat.json  default.json
src-tauri/src/: analysis_contract_tests.rs  app_paths.rs  app_paths_tests.rs  capture_policy_tests.rs  capture_runtime_tests.rs  commands.rs  headless.rs  integration_tests.rs  lib.rs  media_preview.rs  performance_tests.rs  presence.rs  retrieval_tests.rs  shortcuts.rs  state.rs  state_tests.rs  test_support.rs  tray.rs  window_activation.rs
src-tauri/src/analysis/: contract.rs  mod.rs  rebuild.rs  repository.rs  service.rs
src-tauri/src/capture/: macos_files.rs  macos_markers.rs  mod.rs  policy.rs  runtime.rs
src-tauri/src/clipboard/: content_detector.rs  monitor.rs  processor.rs
src-tauri/src/config/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/retrieval/: mod.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/utils/: app_icon_extractor.rs  mod.rs  webpage_preview.rs
src/components/: ClipboardMenuHandler.tsx  chat-button.test.tsx  chat-button.tsx  settings-button.tsx  theme-toggle.tsx
src/hooks/: useExternalMediaDrag.ts
src/lib/: appEvents.ts  clipboardFilters.ts  codeSnapshot.ts  errors.ts
src/stores/: aiStore.test.ts  aiStore.ts  clipboardStore.test.ts  clipboardStore.ts  configStore.test.ts  configStore.ts
src/test/: setup.ts
src/types/: ai.ts  clipboard.ts
(+130 files in other folders)
