[package]
name = "dance"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "dance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
base64 = "0.21"
image = { version = "0.25", features = ["webp"] }
infer = "0.15"
dirs = "5.0"
regex = "1.10"
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
opener = "0.8"
ratatui = "0.30"
ratatui-image = { version = "11.0", default-features = false, features = ["crossterm", "image-defaults"] }
tui-tree-widget = "0.24"
tui-input = "0.15"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde_with = "3.0"
time = { version = "0.3", features = ["formatting"] }
tauri-plugin-aptabase = "1"
dotenvy = "0.15"
unicode-normalization = "0.1"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2.7"
core-graphics = "0.24"
block = "0.1"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "psapi", "processthreadsapi", "handleapi", "synchapi", "winbase", "errhandlingapi", "fileapi", "combaseapi", "objbase", "shobjidl_core", "winerror"] }

[dev-dependencies]
tempfile = "3.0"
futures = "0.3"
